<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LanguageActivity">

    <LinearLayout
        android:id="@+id/Linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linlay1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/tvamount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount" />

            <EditText
                android:id="@+id/amount"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvamount"
                android:digits="0123456789."
                android:inputType="number"
                android:layout_marginLeft="100dp"                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linlay2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linlay1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvYears"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/years" />

            <EditText
                android:id="@+id/years"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvamount"
                android:digits="0123456789."
                android:inputType="number"
                android:layout_marginLeft="80dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linlay3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linlay2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rate" />

            <EditText
                android:id="@+id/rate"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvamount"
                android:digits="0123456789."
                android:inputType="number"
                android:layout_marginLeft="60dp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/Linear1"
        android:layout_weight="0.9"
        android:id="@+id/linbutton"
        >

        <Button
            android:layout_weight="1"
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/calculate_si"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:layout_marginRight="7dp"/>
        <Button
            android:layout_weight="1"
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/calculate_ci"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:layout_below="@+id/linbutton"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="45dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calcInterest"/>
        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/editcalculatedinterest"/>
    </LinearLayout>



</RelativeLayout>